--- a/plugins/app.yaml
+++ b/plugins/app.yaml
@@ -1,2 +1,9 @@
 automatic_scaling:
   min_idle_instances: 1
+inbound_services:
+- mail
+libraries:
+  - name: PIL
+    version: 1.1.7
+skip_files:
+  - libs/PIL*
