--- a/plugins/requirements.txt
+++ b/plugins/requirements.txt
@@ -1,1 +1,5 @@
-python-dateutil==2.6.0
+urllib3==1.22
+python-dateutil==2.6.1
+Pillow==4.0.0
+dicttoxml==1.7.4
+GoogleAppEngineCloudStorageClient==1.9.22.1
