--- a/plugins/app.yaml
+++ b/plugins/app.yaml
@@ -5,5 +5,8 @@ inbound_services:
 libraries:
   - name: PIL
     version: 1.1.7
+  - name: lxml
+    version: "3.7.3"
 skip_files:
   - libs/PIL*
+  - lib/lxml*
