Green valley notifications

--- a/plugins/cron.yaml
+++ b/plugins/cron.yaml
@@ -2,3 +2,6 @@ cron:
 - description: Cleanup timed out reports
   url: /admin/cron/reports/cleanup/timed_out
   schedule: every day 00:00
+- description: Check Green Valley Notifications
+  url: /admin/cron/reports/green-valley-notifications
+  schedule: every 1 hours
